docker/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-redis-websocket-jvm-deployment
  labels:
    app: spring-redis-websocket
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-redis-websocket
  template:
    metadata:
      labels:
        app: spring-redis-websocket
    spec:
      containers:
        -   name: spring-redis-websocket
            image: rawsanj/spring-redis-websocket:3.2.0-jvm
            resources:
              limits:
                memory: "512Mi"
                cpu: "0.5"
              requests:
                memory: "512Mi"
                cpu: "0.5"
            ports:
              -   containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-redis-websocket-native-deployment
  labels:
    app: spring-redis-websocket
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-redis-websocket
  template:
    metadata:
      labels:
        app: spring-redis-websocket
    spec:
      containers:
        -   name: spring-redis-websocket
            image: rawsanj/spring-redis-websocket:3.2.0-native
            resources:
              limits:
                memory: "512Mi"
                cpu: "0.5"
              requests:
                memory: "512Mi"
                cpu: "0.5"
            ports:
              -   containerPort: 8080
