docker/redis/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        -   name: redis
            image: 'bitnami/redis:4.0.11-r6'
            ports:
              -   containerPort: 6379
            volumeMounts:
              -   mountPath: "/bitnami"
                  name: cache-volume
      volumes:
        -   name: cache-volume
            emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    -   protocol: TCP
        port: 6379
        targetPort: 6379
  type: ClusterIP
